2006-06-19  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc: handle prev_line==0 case (fixes coredump).

2006-06-16  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc, SleepJob.h: new options for repeat (--while-ok, --until-ok).

2006-06-15  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc, SleepJob.h, commands.cc: new options for repeat (--count, --delay).
	* NetAccess.cc, NetAccess.h, Http.cc: drop two arg SetSocketBuffer and
	  SetSocketMaxseg methods.
	* ftpclass.cc, ftpclass.h, resource.cc: move abor_close_timer to Ftp::Connection;
	  init it from resource ftp:abor-max-wait; read and discard data from aborted
	  data connection.

2006-06-14  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: use TimeInterval two arg ctor.
	* ftpclass.cc, ftpclass.h: use abor_close_timer instead of abor_time;
	  use Time::Passed and TimeDiff vs int cmp.
	* Timer.cc, Timer.h: new method IsInfty; reset event when start==now.
	* TimeDate.cc, TimeDate.h: fix normalize for negative msec;
	  inline lt; new method Time::Passed; comparision of TimeDiff with
	  int seconds.
	* SleepJob.cc, SleepJob.h: use Timer.
	* commands.cc: don't use Ascii for quote, this fixes `quote POST'.

2006-06-13  Alexander V. Lukyanov <lav@yars.free.net>

	* DummyProto.cc, DummyProto.h, : const everywhere.
	* FileAccess.cc, FileAccess.h: consts; drop url member; new cache; ClassCleanup.
	* FileCopy.cc, FileCopy.h, Fish.cc, Fish.h, FtpDirList.cc,
	  FtpListInfo.cc, GetFileInfo.cc, Http.cc, Http.h, HttpDir.cc,
	  Job.cc, LocalAccess.cc, LocalAccess.h, NetAccess.cc, NetAccess.h,
	  SFtp.cc, SFtp.h, commands.cc, ftpclass.cc, ftpclass.h: const; new cache.
	* Cache.cc, Cache.h: new files; base Cache class.
	* LsCache.cc, LsCache.h, Resolver.cc, Resolver.h: use base Cache class.
	* Makefile.am: add Cache files.
	* ResMgr.cc, ResMgr.h: consts.
	* Timer.cc, Timer.h: add ctor from resource/closure; drop iterators.
	* lftp.cc: call FileAccess::ClassCleanup; ajust max tasks left.
